--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,46 @@ h1 {
     height: 100%;
 }
 #portret {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
+    
 }
-
+.jumbotron p {
+    font-size: 15px;
+}
+a img {
+    width: 100%;
+    margin-bottom: 20px;
+    border-radius: 5px;
+}
+h3 {
+    margin-bottom: 20px;
+}
+#menuButton {
+    width: 100%;
+    background-color: white;
+    color: black;
+    border: 1px solid lightgrey;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+#collapse {
+    background-color: white;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border: 0px;
+}
+.nav-item {
+    border: 1px solid lightgrey;
+    border-top: 0px;
+}
+#last {
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
 @media (min-width: 768px) {
     .bootstrap-vertical-nav {
-        margin-top: 50px;
+        margin-top: 100px;
     }
 }
 @media (min-width: 768px) {
